# SWE_HW1_2023

./: .pre-commit-config.yaml  README.md  app.py  inventory.sqlite  inventory.sqlite-journal  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: python-tests.yml
templates/: base-template.html  index.html  location.html  modal.html  movement.html  product.html
test/: conftest.py  inventory.sqlite  test_delete.py  test_edit.py  test_location.py  test_movement.py  test_product.py  test_summary.py  unittest.py
