[tool.poetry]
name = "pytest-tutorial"
version = "0.1.0"
description = ""
authors = ["Natanan Nithiittikrai <natanan.nit@student.mahidol.edu>"]

[tool.poetry.dependencies]
python = ">3.7,<4"
pytest = "^7.2.1"
flask = "^2.2.2"
csrf = "^0.1b1"
requests = "^2.28.2"
pre-commit = "^2.20.0"
flake8 = "^5.0.1"
pytest-cov = "^3.0.0"
ipykernel = "^6.15.1"
flake8-annotations = "^2.9.1"
flake8-eradicate = "^1.4.0"
testcase = "^0.1.0"
pytest-flask = "^1.2.0"
flask-wtf = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
